# edmondburnett.com

./: .gitattributes  Cargo.toml  README.md  deploy.sh  index.html  main.css  robots.txt
conf/nginx/: edmondburnett.com
conf/systemd/: edmondburnett-com.service
old/: main.css
pages/: about.md  pgp.md  projects.md
posts/: meta-ai-crawling-ddos.md  obligatory-intro-post.md  python-push-to-deploy.md  squid-custom-url-rewriting.md  test-post.md  test-post2.md  test-post3.md  test-post4.md  test-post5.md  test-post6.md  twitter-text-python-1.0.3.md  youcompleteme-archlinux.md
projects/: dram.md
src/: handlers.rs  lib.rs  main.rs  markdown.rs  page.rs  post.rs  project.rs  project_category.rs  routes.rs  tag.rs  validation.rs
static/: main.css  pgp.html  pgp.txt  robots.txt  scripts.js  site.webmanifest  theme.js
templates/: 404.html.j2  about.html.j2  archive.html.j2  error_layout.html.j2  layout.html.j2  page.html.j2  post.html.j2  root.html.j2
tests/: markdown_test.rs  post_validation_test.rs
